--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B12A01</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header>
-
+        <div class="banner">
+            <nav>
+                <div class="logo secondary_color inter-boldtittle">LOGO</div>
+                <a src=""><button class="btn raleway-banner-des">Sign Up</button></a>
+            </nav>
+            <div class="banner-content"> 
+                <p class="raleway-banner-des banner-des">
+                    Cool Dark UI Template for<br>Webflow Agencies!
+                </p>
+                <button class="btn raleway-banner-des">Stay Focused</button>
+            </div>
+        </div>
     </header>
     <main>
 
@@ -16,4 +30,5 @@
 
     </footer>
 </body>
+
 </html>
