Added the Action part

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
         </div>
     </header>
     <main>
-
+        <div class="action">
+            <div class="action-content">
+                <div class="raleway-banner-des action-title">See It in Action</div>
+                <p class="raleway-banner-des secondary-text-color action-des">Explore the live preview and imagine your<br>brand in this bold new look.</p>
+                <button class="btn raleway-banner-des">Launch Live Preview</button>
+            </div>
+            <img src="Assets/wc-big.png">
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </main>
     <footer>
 
