Added the Productive User part

--- a/index.html
+++ b/index.html
@@ -32,9 +32,28 @@
             </div>
             <img src="Assets/wc-big.png">
         </div>
+        <div class="productive_user">
+            <div class="user-title raleway-banner-des">Joined Thousands of Productive Users</div>
+            <div class="users">
+                <div class="user-item">
+                    <p class="inter-boldtittle secondary_color user-item-title">50K</p>
+                    <p class="inter-boldtittle secondary-text-color">Active Users</p>
+                </div>
+                <div class="user-item">
+                    <p class="inter-boldtittle secondary_color user-item-title">2M+</p>
+                    <p class="inter-boldtittle secondary-text-color">Focus Sessions</p>
+                </div>
+                <div class="user-item">
+                    <p class="inter-boldtittle secondary_color user-item-title">95%</p>
+                    <p class="inter-boldtittle secondary-text-color">Satisfaction Rate</p>
+                </div>
+            </div>
+        </div>
+
         <div></div>
+
         <div></div>
-        <div></div>
+        
         <div></div>
     </main>
     <footer>
