Added the Review Part

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </div>
     </header>
     <main>
-        <div class="action">
+        <section class="action">
             <div class="action-content">
                 <div class="raleway-banner-des action-title">See It in Action</div>
                 <p class="raleway-banner-des secondary-text-color action-des">Explore the live preview and imagine your<br>brand in this bold new look.</p>
                 <button class="btn raleway-banner-des">Launch Live Preview</button>
             </div>
             <img src="Assets/wc-big.png">
-        </div>
-        <div class="productive_user">
+        </section>
+        <section class="productive_user">
             <div class="user-title raleway-banner-des">Joined Thousands of Productive Users</div>
             <div class="users">
                 <div class="user-item">
@@ -48,12 +48,61 @@
                     <p class="inter-boldtittle secondary-text-color">Satisfaction Rate</p>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div></div>
+        <section class="review">
+            <div class="review-title raleway-banner-des">What our users say</div>
+            <div class="reviews">
+                <div class="account">
+                    <div class="star">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                    </div>
+                    <h1 class="raleway-banner-des">Loved by Designers</h1>
+                    <p class="raleway-banner-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="accout-id">
+                        <img src="Assets/avatar.png" class="avater_image">
+                        <p class="raleway-banner-des secondary-text-color"><span>Reviewer name</span> <br>Date</p>
+                    </div>
+                </div>
+                <div class="account">
+                    <div class="star">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                    </div>
+                    <h1 class="raleway-banner-des">Loved by Designers</h1>
+                    <p class="raleway-banner-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="accout-id">
+                        <img src="Assets/avatar.png" class="avater_image">
+                        <p class="raleway-banner-des secondary-text-color"><span>Reviewer name</span> <br>Date</p>
+                    </div>
+                </div>
+                <div class="account">
+                    <div class="star">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                        <img src="Assets/icon-star.png">
+                    </div>
+                    <h1 class="raleway-banner-des">Loved by Designers</h1>
+                    <p class="raleway-banner-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="accout-id">
+                        <img src="Assets/avatar.png" class="avater_image">
+                        <p class="raleway-banner-des secondary-text-color"><span>Reviewer name</span> <br>Date</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div></div>
-        
+        <section></section>
+
         <div></div>
     </main>
     <footer>
