--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
             <img src="Assets/wc-big.png">
         </section>
+
         <section class="productive_user">
             <div class="user-title raleway-banner-des">Joined Thousands of Productive Users</div>
             <div class="users">
@@ -101,9 +102,16 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="focus">
+            <div class="focus-title raleway-banner-des">Ready to focus better</div>
+            <p class="secondary-text-color raleway-banner-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn raleway-banner-des">Ger Started Free</button>
+            <div>
+               <img src="Assets/wc-big.png" class="focus-image">
+            </div>
+        </section>
 
-        <div></div>
+        <section></section>
     </main>
     <footer>
 
