--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo secondary_color inter-boldtittle">LOGO</div>
                 <a src=""><button class="btn raleway-banner-des">Sign Up</button></a>
             </nav>
-            <div class="banner-content"> 
+            <div class="banner-content">
                 <p class="raleway-banner-des banner-des">
                     Cool Dark UI Template for<br>Webflow Agencies!
                 </p>
@@ -27,7 +27,8 @@
         <section class="action">
             <div class="action-content">
                 <div class="raleway-banner-des action-title">See It in Action</div>
-                <p class="raleway-banner-des secondary-text-color action-des">Explore the live preview and imagine your<br>brand in this bold new look.</p>
+                <p class="raleway-banner-des secondary-text-color action-des">Explore the live preview and imagine
+                    your<br>brand in this bold new look.</p>
                 <button class="btn raleway-banner-des">Launch Live Preview</button>
             </div>
             <img src="Assets/wc-big.png">
@@ -104,17 +105,41 @@
 
         <section class="focus">
             <div class="focus-title raleway-banner-des">Ready to focus better</div>
-            <p class="secondary-text-color raleway-banner-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <p class="secondary-text-color raleway-banner-des">This template instantly leveled up our presence.” –
+                Studio Vertex</p>
             <button class="btn raleway-banner-des">Ger Started Free</button>
             <div>
-               <img src="Assets/wc-big.png" class="focus-image">
+                <img src="Assets/wc-big.png" class="focus-image">
             </div>
         </section>
 
-        <section></section>
-    </main>
-    <footer>
+        <section class="get-in-touch">
+            <div class="touch-title raleway-banner-des">Let’s Get in Touch</div>
+            <div class="inter-boldtittle">
+                <form >
+                    <lebel for="email">Email</lebel>
+                    <input type="email" name="email" id="email" placeholder="example@email.com">
 
+                    <lebel for="name">Name</lebel>
+                    <input type="text" name="name" id="name" placeholder="Full Name">
+
+                    <lebel for="mssg">Massage</lebel>
+                    <textarea cols="30" rows="6" name="mssg" id="mssg" class="inter-boldtittle" placeholder="Write your message...."></textarea>
+                </form>
+                <button class="btn">Get in Touch</button>
+            </div>
+        </section>
+    </main>
+    <hr>
+    <footer>
+        <div class="footer-title inter-boldtittle secondary_color">LOGO</div>
+        <p class="secondary-text-color inter-boldtittle">Ready to elevate your online presence? Contact us today to discuss<br>your project and discover how we can bring your vision to life.</p>
+        <iv class="about">
+            <div class="inter-boldtittle secondary-text-color"><a src="">Home</a></div>
+            <div class="inter-boldtittle secondary-text-color"><a src="">About</a></div>
+            <div class="inter-boldtittle secondary-text-color"><a src="">How it Works</a></div>
+            <div class="inter-boldtittle secondary-text-color"><a src="">Services</a></div>
+        </div>
     </footer>
 </body>
 
